--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 28 21:49:13 IST 2019
-sdk.dir=C\:\\MyDevEnvAS\\Android\\Sdk
+#Fri Mar 29 01:29:20 IST 2019
+sdk.dir=D\:\\oran
