--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 29 03:52:12 IDT 2019
-sdk.dir=C\:\\MyDevEnvAS\\Android\\Sdk
+#Fri Mar 29 06:39:38 IDT 2019
+sdk.dir=D\:\\oran
